cmake_minimum_required(VERSION 2.8)

project ( ServerInTheMiddle CXX )
file ( GLOB_RECURSE SRC *.?pp )
add_executable(ServerInTheMiddle ${SRC})
target_link_libraries(ServerInTheMiddle Qt5::Core)
target_link_libraries(ServerInTheMiddle Qt5::Gui)
target_link_libraries(ServerInTheMiddle Utility)
target_link_libraries(ServerInTheMiddle Networking)
target_link_libraries(ServerInTheMiddle TcpNetworking)
target_link_libraries(ServerInTheMiddle AssetInterfaces)
target_link_libraries(ServerInTheMiddle AssetGenerics)
target_link_libraries(ServerInTheMiddle Assets)
target_link_libraries(ServerInTheMiddle Wavefront)
target_link_libraries(ServerInTheMiddle QImageLoader)
target_link_libraries(ServerInTheMiddle ServerManager)
