cmake_minimum_required(VERSION 2.8)

project ( ThreadedServerInTheMiddle CXX )
file ( GLOB_RECURSE SRC *.?pp )
add_executable(ThreadedServerInTheMiddle ${SRC})
target_link_libraries(ThreadedServerInTheMiddle Qt5::Core)
target_link_libraries(ThreadedServerInTheMiddle Qt5::Gui)
target_link_libraries(ThreadedServerInTheMiddle Utility)
target_link_libraries(ThreadedServerInTheMiddle Networking)
target_link_libraries(ThreadedServerInTheMiddle TcpNetworking)
target_link_libraries(ThreadedServerInTheMiddle AssetInterfaces)
target_link_libraries(ThreadedServerInTheMiddle AssetGenerics)
target_link_libraries(ThreadedServerInTheMiddle Assets)
target_link_libraries(ThreadedServerInTheMiddle Wavefront)
target_link_libraries(ThreadedServerInTheMiddle QImageLoader)
target_link_libraries(ThreadedServerInTheMiddle ServerManager)
